--- a/goods/[Food_Processed]_Biscuits.html
+++ b/goods/[Food_Processed]_Biscuits.html
@@ -52,8 +52,8 @@
                     <a href="/data-wiki/console-commands">Commands</a>
                 </nav>
                  <nav>
-                    <span>Wiki Updated: 13/Apr/23</span>
-                    <span>Game Version: Early Access 0.48.1</span>
+                    <span>Wiki Updated: 22/Apr/23</span>
+                    <span>Game Version: Early Access 0.48.2</span>
                     <span>Scale costs for difficulty:</span>
                     <select id="difficulty-select">
                         <option value="0_Normal">Settler</option>
@@ -83,8 +83,11 @@
                     </select>
                 </nav>
                 </header><main>
-<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-128x128-1556x260.png"/>[Food Processed] Biscuits</h2>
+<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-128x128-1556x260.png"/>[Food Processed] Biscuits</h2>
 <h4>Tasty and crunchy. Produced by: Field Kitchen, Bakery, Cookhouse, Smelter, Apothecary.</h4>
+<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.25</div>
+<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.12</div>
+<div><b>Purchased for:</b> 0.41</div>
 <h3>Produced By</h3>
 <div class="recipe-container">
 <div class="recipe-header">
@@ -98,16 +101,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
 </div>
 </div>
 </div>
@@ -123,16 +126,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
 </div>
 </div>
 </div>
@@ -148,16 +151,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
 </div>
 </div>
 </div>
@@ -173,16 +176,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
 </div>
 </div>
 </div>
@@ -198,16 +201,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Roots" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x520.png"/> <a href="../goods/[Food_Raw]_Roots.html"> Roots</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Biscuits" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1556x260.png"/> <a href="../goods/[Food_Processed]_Biscuits.html"> Biscuits</a></span>
 </div>
 </div>
 </div>
