--- a/goods/[Mat_Processed]_Pipe.html
+++ b/goods/[Mat_Processed]_Pipe.html
@@ -52,8 +52,8 @@
                     <a href="/data-wiki/console-commands">Commands</a>
                 </nav>
                  <nav>
-                    <span>Wiki Updated: 13/Apr/23</span>
-                    <span>Game Version: Early Access 0.48.1</span>
+                    <span>Wiki Updated: 22/Apr/23</span>
+                    <span>Game Version: Early Access 0.48.2</span>
                     <span>Scale costs for difficulty:</span>
                     <select id="difficulty-select">
                         <option value="0_Normal">Settler</option>
@@ -83,8 +83,11 @@
                     </select>
                 </nav>
                 </header><main>
-<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-128x128-0x1025.png"/>[Mat Processed] Pipe</h2>
+<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-128x128-0x1025.png"/>[Mat Processed] Pipe</h2>
 <h4>Used to install Rainpunk Engines in production buildings and build Geyser Pumps. Produced by: Crude Workstation, Workshop, Smelter, Toolshop.</h4>
+<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.58</div>
+<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.28</div>
+<div><b>Purchased for:</b> 1</div>
 <h3>Produced By</h3>
 <div class="recipe-container">
 <div class="recipe-header">
@@ -98,11 +101,11 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pipes" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1025.png"/> <a href="../goods/[Mat_Processed]_Pipe.html"> Pipes</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pipes" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1025.png"/> <a href="../goods/[Mat_Processed]_Pipe.html"> Pipes</a></span>
 </div>
 </div>
 </div>
@@ -118,11 +121,11 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pipes" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1025.png"/> <a href="../goods/[Mat_Processed]_Pipe.html"> Pipes</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pipes" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1025.png"/> <a href="../goods/[Mat_Processed]_Pipe.html"> Pipes</a></span>
 </div>
 </div>
 </div>
@@ -138,11 +141,11 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pipes" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1025.png"/> <a href="../goods/[Mat_Processed]_Pipe.html"> Pipes</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pipes" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1025.png"/> <a href="../goods/[Mat_Processed]_Pipe.html"> Pipes</a></span>
 </div>
 </div>
 </div>
@@ -158,11 +161,11 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pipes" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1025.png"/> <a href="../goods/[Mat_Processed]_Pipe.html"> Pipes</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pipes" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1025.png"/> <a href="../goods/[Mat_Processed]_Pipe.html"> Pipes</a></span>
 </div>
 </div>
 </div>
