--- a/goods/[Valuable]_Amber.html
+++ b/goods/[Valuable]_Amber.html
@@ -52,8 +52,8 @@
                     <a href="/data-wiki/console-commands">Commands</a>
                 </nav>
                  <nav>
-                    <span>Wiki Updated: 13/Apr/23</span>
-                    <span>Game Version: Early Access 0.48.1</span>
+                    <span>Wiki Updated: 22/Apr/23</span>
+                    <span>Game Version: Early Access 0.48.2</span>
                     <span>Scale costs for difficulty:</span>
                     <select id="difficulty-select">
                         <option value="0_Normal">Settler</option>
@@ -83,8 +83,11 @@
                     </select>
                 </nav>
                 </header><main>
-<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-128x128-3636x260.png"/>[Valuable] Amber</h2>
+<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-128x128-3636x260.png"/>[Valuable] Amber</h2>
 <h4>A widely accepted currency in the kingdom. Crystalized tree blood... fitting.</h4>
+<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 1</div>
+<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.5</div>
+<div><b>Purchased for:</b> 1.25</div>
 <h3>Produced By</h3>
 <div class="recipe-container">
 <div class="recipe-header">
@@ -98,15 +101,15 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Resin" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2860x1560.png"/> <a href="../goods/[Mat_Raw]_Resin.html"> Resin</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Resin" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2860x1560.png"/> <a href="../goods/[Mat_Raw]_Resin.html"> Resin</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Clearance Water" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x0.png"/> <a href="../goods/[Water]_Clearance_Water.html"> Clearance Water</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Oil" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x520.png"/> <a href="../goods/[Crafting]_Oil.html"> Oil</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Clearance Water" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x0.png"/> <a href="../goods/[Water]_Clearance_Water.html"> Clearance Water</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Oil" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x520.png"/> <a href="../goods/[Crafting]_Oil.html"> Oil</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Amber" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3636x260.png"/> <a href="../goods/[Valuable]_Amber.html"> Amber</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Amber" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3636x260.png"/> <a href="../goods/[Valuable]_Amber.html"> Amber</a></span>
 </div>
 </div>
 </div>
