--- a/goods/_Meta_Food_Stockpiles.html
+++ b/goods/_Meta_Food_Stockpiles.html
@@ -52,8 +52,8 @@
                     <a href="/data-wiki/console-commands">Commands</a>
                 </nav>
                  <nav>
-                    <span>Wiki Updated: 13/Apr/23</span>
-                    <span>Game Version: Early Access 0.48.1</span>
+                    <span>Wiki Updated: 22/Apr/23</span>
+                    <span>Game Version: Early Access 0.48.2</span>
                     <span>Scale costs for difficulty:</span>
                     <select id="difficulty-select">
                         <option value="0_Normal">Settler</option>
@@ -85,6 +85,9 @@
                 </header><main>
 <h2><img title="[null]" src="/data-wiki/img/Icon_MetaResource_FoodStockpiles-128x128.png"/>_Meta Food Stockpiles</h2>
 <h4>A basic currency in the realm. Workers are eager to exchange their labor for food for their families. Can be used to buy upgrades in the Smoldering City.</h4>
+<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 2.5</div>
+<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 1.25</div>
+<div><b>Purchased for:</b> 3.75</div>
 </body>
 
 
