--- a/goods/[Needs]_Coats.html
+++ b/goods/[Needs]_Coats.html
@@ -83,10 +83,10 @@
                     </select>
                 </nav>
                 </header><main>
-<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-128x128-3380x1040.png"/>[Needs] Coats</h2>
+<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-128x128-3380x1040.png"/>[Needs] Coats</h2>
 <h4>Used as clothing by some villagers. Produced by: Clothier, Smithy, Artisan, Druid's Hut.</h4>
-<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.1</div>
-<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.05</div>
+<div class="filter-difficulty difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.1</div>
+<div class="filter-difficulty difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.05</div>
 <div><b>Purchased for:</b> 0.16</div>
 <h3>Produced By</h3>
 <div class="recipe-container">
@@ -101,10 +101,10 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Fabric" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3636x0.png"/> <a href="../goods/[Mat_Processed]_Fabric.html"> Fabric</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Fabric" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3636x0.png"/> <a href="../goods/[Mat_Processed]_Fabric.html"> Fabric</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Coats" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3380x1040.png"/> <a href="../goods/[Needs]_Coats.html"> Coats</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Coats" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3380x1040.png"/> <a href="../goods/[Needs]_Coats.html"> Coats</a></span>
 </div>
 </div>
 </div>
@@ -120,10 +120,10 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Fabric" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3636x0.png"/> <a href="../goods/[Mat_Processed]_Fabric.html"> Fabric</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Fabric" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3636x0.png"/> <a href="../goods/[Mat_Processed]_Fabric.html"> Fabric</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Coats" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3380x1040.png"/> <a href="../goods/[Needs]_Coats.html"> Coats</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Coats" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3380x1040.png"/> <a href="../goods/[Needs]_Coats.html"> Coats</a></span>
 </div>
 </div>
 </div>
@@ -139,10 +139,10 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Fabric" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3636x0.png"/> <a href="../goods/[Mat_Processed]_Fabric.html"> Fabric</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Fabric" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3636x0.png"/> <a href="../goods/[Mat_Processed]_Fabric.html"> Fabric</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Coats" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3380x1040.png"/> <a href="../goods/[Needs]_Coats.html"> Coats</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Coats" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3380x1040.png"/> <a href="../goods/[Needs]_Coats.html"> Coats</a></span>
 </div>
 </div>
 </div>
@@ -158,10 +158,10 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Fabric" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3636x0.png"/> <a href="../goods/[Mat_Processed]_Fabric.html"> Fabric</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Fabric" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3636x0.png"/> <a href="../goods/[Mat_Processed]_Fabric.html"> Fabric</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Coats" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3380x1040.png"/> <a href="../goods/[Needs]_Coats.html"> Coats</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Coats" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3380x1040.png"/> <a href="../goods/[Needs]_Coats.html"> Coats</a></span>
 </div>
 </div>
 </div>
