--- a/goods/[Packs]_Pack_of_Luxury_Goods.html
+++ b/goods/[Packs]_Pack_of_Luxury_Goods.html
@@ -83,10 +83,10 @@
                     </select>
                 </nav>
                 </header><main>
-<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-128x128-3116x520.png"/>[Packs] Pack of Luxury Goods</h2>
+<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-128x128-3116x520.png"/>[Packs] Pack of Luxury Goods</h2>
 <h4>Goods packed for delivery, used for fulfilling orders or trading. Produced by: Carpenter, Leatherworker, Press.</h4>
-<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.65</div>
-<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.32</div>
+<div class="filter-difficulty difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.65</div>
+<div class="filter-difficulty difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.32</div>
 <div><b>Purchased for:</b> 1</div>
 <h3>Produced By</h3>
 <div class="recipe-container">
@@ -101,15 +101,15 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Wine" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2856x520.png"/> <a href="../goods/[Needs]_Wine.html"> Wine</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Training Gear" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-516x780.png"/> <a href="../goods/[Needs]_Training_Gear.html"> Training Gear</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Incense" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2076x260.png"/> <a href="../goods/[Needs]_Incense.html"> Incense</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Scrolls" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1040x1560.png"/> <a href="../goods/[Needs]_Scrolls.html"> Scrolls</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Ale" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2325.png"/> <a href="../goods/[Needs]_Ale.html"> Ale</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Tea" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1040x1300.png"/> <a href="../goods/[Needs]_Tea.html"> Tea</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Wine" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2856x520.png"/> <a href="../goods/[Needs]_Wine.html"> Wine</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Training Gear" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-516x780.png"/> <a href="../goods/[Needs]_Training_Gear.html"> Training Gear</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Incense" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2076x260.png"/> <a href="../goods/[Needs]_Incense.html"> Incense</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Scrolls" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1040x1560.png"/> <a href="../goods/[Needs]_Scrolls.html"> Scrolls</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Ale" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2325.png"/> <a href="../goods/[Needs]_Ale.html"> Ale</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Tea" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1040x1300.png"/> <a href="../goods/[Needs]_Tea.html"> Tea</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Luxury Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3116x520.png"/> <a href="../goods/[Packs]_Pack_of_Luxury_Goods.html"> Pack of Luxury Goods</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Luxury Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3116x520.png"/> <a href="../goods/[Packs]_Pack_of_Luxury_Goods.html"> Pack of Luxury Goods</a></span>
 </div>
 </div>
 </div>
@@ -125,15 +125,15 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Wine" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2856x520.png"/> <a href="../goods/[Needs]_Wine.html"> Wine</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Training Gear" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-516x780.png"/> <a href="../goods/[Needs]_Training_Gear.html"> Training Gear</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Incense" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2076x260.png"/> <a href="../goods/[Needs]_Incense.html"> Incense</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Scrolls" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1040x1560.png"/> <a href="../goods/[Needs]_Scrolls.html"> Scrolls</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Ale" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2325.png"/> <a href="../goods/[Needs]_Ale.html"> Ale</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Tea" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1040x1300.png"/> <a href="../goods/[Needs]_Tea.html"> Tea</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Wine" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2856x520.png"/> <a href="../goods/[Needs]_Wine.html"> Wine</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Training Gear" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-516x780.png"/> <a href="../goods/[Needs]_Training_Gear.html"> Training Gear</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Incense" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2076x260.png"/> <a href="../goods/[Needs]_Incense.html"> Incense</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Scrolls" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1040x1560.png"/> <a href="../goods/[Needs]_Scrolls.html"> Scrolls</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Ale" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2325.png"/> <a href="../goods/[Needs]_Ale.html"> Ale</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="5">5</span>× <img title="Tea" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1040x1300.png"/> <a href="../goods/[Needs]_Tea.html"> Tea</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Luxury Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3116x520.png"/> <a href="../goods/[Packs]_Pack_of_Luxury_Goods.html"> Pack of Luxury Goods</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Luxury Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3116x520.png"/> <a href="../goods/[Packs]_Pack_of_Luxury_Goods.html"> Pack of Luxury Goods</a></span>
 </div>
 </div>
 </div>
@@ -149,15 +149,15 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Wine" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2856x520.png"/> <a href="../goods/[Needs]_Wine.html"> Wine</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Training Gear" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-516x780.png"/> <a href="../goods/[Needs]_Training_Gear.html"> Training Gear</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Incense" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2076x260.png"/> <a href="../goods/[Needs]_Incense.html"> Incense</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Scrolls" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1040x1560.png"/> <a href="../goods/[Needs]_Scrolls.html"> Scrolls</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Ale" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2325.png"/> <a href="../goods/[Needs]_Ale.html"> Ale</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Tea" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1040x1300.png"/> <a href="../goods/[Needs]_Tea.html"> Tea</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Wine" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2856x520.png"/> <a href="../goods/[Needs]_Wine.html"> Wine</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Training Gear" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-516x780.png"/> <a href="../goods/[Needs]_Training_Gear.html"> Training Gear</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Incense" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2076x260.png"/> <a href="../goods/[Needs]_Incense.html"> Incense</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Scrolls" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1040x1560.png"/> <a href="../goods/[Needs]_Scrolls.html"> Scrolls</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Ale" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2325.png"/> <a href="../goods/[Needs]_Ale.html"> Ale</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Tea" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1040x1300.png"/> <a href="../goods/[Needs]_Tea.html"> Tea</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Luxury Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3116x520.png"/> <a href="../goods/[Packs]_Pack_of_Luxury_Goods.html"> Pack of Luxury Goods</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Luxury Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3116x520.png"/> <a href="../goods/[Packs]_Pack_of_Luxury_Goods.html"> Pack of Luxury Goods</a></span>
 </div>
 </div>
 </div>
