--- a/goods/[Packs]_Pack_of_Provisions.html
+++ b/goods/[Packs]_Pack_of_Provisions.html
@@ -83,10 +83,10 @@
                     </select>
                 </nav>
                 </header><main>
-<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-128x128-516x260.png"/>[Packs] Pack of Provisions</h2>
+<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-128x128-516x260.png"/>[Packs] Pack of Provisions</h2>
 <h4>Goods packed for delivery, used for fulfilling orders or trading. Produced by: Makeshift Post, Provisioner, Manufactory.</h4>
-<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.4</div>
-<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.2</div>
+<div class="filter-difficulty difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.4</div>
+<div class="filter-difficulty difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.2</div>
 <div><b>Purchased for:</b> 0.66</div>
 <h3>Produced By</h3>
 <div class="recipe-container">
@@ -101,14 +101,14 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Insects" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-776x780.png"/> <a href="../goods/[Food_Raw]_Insects.html"> Insects</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Meat" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3376x260.png"/> <a href="../goods/[Food_Raw]_Meat.html"> Meat</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Eggs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2600x1300.png"/> <a href="../goods/[Food_Raw]_Eggs.html"> Eggs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Insects" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-776x780.png"/> <a href="../goods/[Food_Raw]_Insects.html"> Insects</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Meat" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3376x260.png"/> <a href="../goods/[Food_Raw]_Meat.html"> Meat</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Eggs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2600x1300.png"/> <a href="../goods/[Food_Raw]_Eggs.html"> Eggs</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pack of Provisions" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-516x260.png"/> <a href="../goods/[Packs]_Pack_of_Provisions.html"> Pack of Provisions</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pack of Provisions" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-516x260.png"/> <a href="../goods/[Packs]_Pack_of_Provisions.html"> Pack of Provisions</a></span>
 </div>
 </div>
 </div>
@@ -124,14 +124,14 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Insects" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-776x780.png"/> <a href="../goods/[Food_Raw]_Insects.html"> Insects</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Meat" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3376x260.png"/> <a href="../goods/[Food_Raw]_Meat.html"> Meat</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Eggs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2600x1300.png"/> <a href="../goods/[Food_Raw]_Eggs.html"> Eggs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Insects" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-776x780.png"/> <a href="../goods/[Food_Raw]_Insects.html"> Insects</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Meat" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3376x260.png"/> <a href="../goods/[Food_Raw]_Meat.html"> Meat</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Eggs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2600x1300.png"/> <a href="../goods/[Food_Raw]_Eggs.html"> Eggs</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pack of Provisions" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-516x260.png"/> <a href="../goods/[Packs]_Pack_of_Provisions.html"> Pack of Provisions</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pack of Provisions" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-516x260.png"/> <a href="../goods/[Packs]_Pack_of_Provisions.html"> Pack of Provisions</a></span>
 </div>
 </div>
 </div>
@@ -147,14 +147,14 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Insects" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-776x780.png"/> <a href="../goods/[Food_Raw]_Insects.html"> Insects</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Meat" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3376x260.png"/> <a href="../goods/[Food_Raw]_Meat.html"> Meat</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Eggs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2600x1300.png"/> <a href="../goods/[Food_Raw]_Eggs.html"> Eggs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Herbs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2065.png"/> <a href="../goods/[Food_Raw]_Herbs.html"> Herbs</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Berries" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2596x260.png"/> <a href="../goods/[Food_Raw]_Berries.html"> Berries</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Insects" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-776x780.png"/> <a href="../goods/[Food_Raw]_Insects.html"> Insects</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Meat" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3376x260.png"/> <a href="../goods/[Food_Raw]_Meat.html"> Meat</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Eggs" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2600x1300.png"/> <a href="../goods/[Food_Raw]_Eggs.html"> Eggs</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pack of Provisions" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-516x260.png"/> <a href="../goods/[Packs]_Pack_of_Provisions.html"> Pack of Provisions</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Pack of Provisions" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-516x260.png"/> <a href="../goods/[Packs]_Pack_of_Provisions.html"> Pack of Provisions</a></span>
 </div>
 </div>
 </div>
