--- a/goods/[Packs]_Pack_of_Trade_Goods.html
+++ b/goods/[Packs]_Pack_of_Trade_Goods.html
@@ -83,10 +83,10 @@
                     </select>
                 </nav>
                 </header><main>
-<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-128x128-260x2080.png"/>[Packs] Pack of Trade Goods</h2>
+<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-128x128-260x2080.png"/>[Packs] Pack of Trade Goods</h2>
 <h4>Goods packed for delivery, used for fulfilling orders or trading. Produced by: Lumber Mill, Weaver, Smithy.</h4>
-<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.8</div>
-<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.4</div>
+<div class="filter-difficulty difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 0.8</div>
+<div class="filter-difficulty difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.4</div>
 <div><b>Purchased for:</b> 1.33</div>
 <h3>Produced By</h3>
 <div class="recipe-container">
@@ -101,15 +101,15 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Pigment" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3120x1300.png"/> <a href="../goods/[Crafting]_Pigment.html"> Pigment</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Oil" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x520.png"/> <a href="../goods/[Crafting]_Oil.html"> Oil</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Pottery" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-780x1040.png"/> <a href="../goods/[Vessel]_Pottery.html"> Pottery</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Barrels" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x780.png"/> <a href="../goods/[Vessel]_Barrels.html"> Barrels</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Waterskins" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1036x780.png"/> <a href="../goods/[Vessel]_Waterskin.html"> Waterskins</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Pigment" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3120x1300.png"/> <a href="../goods/[Crafting]_Pigment.html"> Pigment</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Oil" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x520.png"/> <a href="../goods/[Crafting]_Oil.html"> Oil</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Pottery" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-780x1040.png"/> <a href="../goods/[Vessel]_Pottery.html"> Pottery</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Barrels" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x780.png"/> <a href="../goods/[Vessel]_Barrels.html"> Barrels</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Waterskins" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1036x780.png"/> <a href="../goods/[Vessel]_Waterskin.html"> Waterskins</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Trade Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x2080.png"/> <a href="../goods/[Packs]_Pack_of_Trade_Goods.html"> Pack of Trade Goods</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Trade Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x2080.png"/> <a href="../goods/[Packs]_Pack_of_Trade_Goods.html"> Pack of Trade Goods</a></span>
 </div>
 </div>
 </div>
@@ -125,15 +125,15 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Pigment" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3120x1300.png"/> <a href="../goods/[Crafting]_Pigment.html"> Pigment</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Oil" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x520.png"/> <a href="../goods/[Crafting]_Oil.html"> Oil</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Pottery" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-780x1040.png"/> <a href="../goods/[Vessel]_Pottery.html"> Pottery</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Barrels" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x780.png"/> <a href="../goods/[Vessel]_Barrels.html"> Barrels</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Waterskins" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1036x780.png"/> <a href="../goods/[Vessel]_Waterskin.html"> Waterskins</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Pigment" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3120x1300.png"/> <a href="../goods/[Crafting]_Pigment.html"> Pigment</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Oil" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x520.png"/> <a href="../goods/[Crafting]_Oil.html"> Oil</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Pottery" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-780x1040.png"/> <a href="../goods/[Vessel]_Pottery.html"> Pottery</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Barrels" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x780.png"/> <a href="../goods/[Vessel]_Barrels.html"> Barrels</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Waterskins" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1036x780.png"/> <a href="../goods/[Vessel]_Waterskin.html"> Waterskins</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Trade Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x2080.png"/> <a href="../goods/[Packs]_Pack_of_Trade_Goods.html"> Pack of Trade Goods</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Trade Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x2080.png"/> <a href="../goods/[Packs]_Pack_of_Trade_Goods.html"> Pack of Trade Goods</a></span>
 </div>
 </div>
 </div>
@@ -149,15 +149,15 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Pigment" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-3120x1300.png"/> <a href="../goods/[Crafting]_Pigment.html"> Pigment</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Oil" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x520.png"/> <a href="../goods/[Crafting]_Oil.html"> Oil</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Pottery" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-780x1040.png"/> <a href="../goods/[Vessel]_Pottery.html"> Pottery</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Barrels" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x780.png"/> <a href="../goods/[Vessel]_Barrels.html"> Barrels</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Waterskins" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1036x780.png"/> <a href="../goods/[Vessel]_Waterskin.html"> Waterskins</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Pigment" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-3120x1300.png"/> <a href="../goods/[Crafting]_Pigment.html"> Pigment</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Oil" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x520.png"/> <a href="../goods/[Crafting]_Oil.html"> Oil</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Flour" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x1545.png"/> <a href="../goods/[Crafting]_Flour.html"> Flour</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Pottery" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-780x1040.png"/> <a href="../goods/[Vessel]_Pottery.html"> Pottery</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Barrels" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x780.png"/> <a href="../goods/[Vessel]_Barrels.html"> Barrels</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Waterskins" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1036x780.png"/> <a href="../goods/[Vessel]_Waterskin.html"> Waterskins</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Trade Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x2080.png"/> <a href="../goods/[Packs]_Pack_of_Trade_Goods.html"> Pack of Trade Goods</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Pack of Trade Goods" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x2080.png"/> <a href="../goods/[Packs]_Pack_of_Trade_Goods.html"> Pack of Trade Goods</a></span>
 </div>
 </div>
 </div>
