--- a/goods/[Tools]_Simple_Tools.html
+++ b/goods/[Tools]_Simple_Tools.html
@@ -83,10 +83,10 @@
                     </select>
                 </nav>
                 </header><main>
-<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-128x128-260x1820.png"/>[Tools] Simple Tools</h2>
+<h2><img title="[null]" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-128x128-260x1820.png"/>[Tools] Simple Tools</h2>
 <h4>Used in exploration, for opening caches and completing difficult events. Produced by: Carpenter, Smithy, Toolshop, Tinkerer, Scribe, Finesmith.</h4>
-<div class="difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 1.38</div>
-<div class="difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.68</div>
+<div class="filter-difficulty difficulty-Tutorial_I_Difficulty difficulty-Tutorial_II_Difficulty difficulty-0_Normal difficulty-1_Hard difficulty-2_Very_Hard difficulty-3_Impossible difficulty-4_Ascension_I difficulty-5_Ascension_II difficulty-6_Ascension_III difficulty-7_Ascension_IV difficulty-8_Ascension_V difficulty-9_Ascension_VI difficulty-10_Ascension_VII difficulty-11_Ascension_VIII"><b>Sells for:</b> 1.38</div>
+<div class="filter-difficulty difficulty-12_Ascension_IX difficulty-13_Ascension_X difficulty-14_Ascension_XI difficulty-15_Ascension_XII difficulty-16_Ascension_XIII difficulty-17_Ascension_XIV difficulty-18_Ascension_XV difficulty-19_Ascension_XVI difficulty-20_Ascension_XVII difficulty-21_Ascension_XVIII difficulty-22_Ascension_XIX difficulty-23_Ascension_XX"><b>Sells for:</b> 0.68</div>
 <div><b>Purchased for:</b> 2.31</div>
 <h3>Produced By</h3>
 <div class="recipe-container">
@@ -101,16 +101,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="10">10</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="4">4</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
 </div>
 </div>
 </div>
@@ -126,16 +126,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
 </div>
 </div>
 </div>
@@ -151,16 +151,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
 </div>
 </div>
 </div>
@@ -176,16 +176,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="8">8</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="3">3</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
 </div>
 </div>
 </div>
@@ -201,16 +201,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
 </div>
 </div>
 </div>
@@ -226,16 +226,16 @@
 </div>
 <div class="recipe ">
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="6">6</span>× <img title="Wood" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-1816x780.png"/> <a href="../goods/[Mat_Raw]_Wood.html"> Wood</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="1">1</span>× <img title="Planks" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1040.png"/> <a href="../goods/[Mat_Processed]_Planks.html"> Planks</a></div>
 </div>
 <div class="recipe-add">+</div>
 <div class="ingredient">
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
-<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Copper Bars" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-2336x260.png"/> <a href="../goods/[Metal]_Copper_Bar.html"> Copper Bars</a></div>
+<div><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Crystalized Dew" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-0x2585.png"/> <a href="../goods/[Metal]_Crystalized_Dew.html"> Crystalized Dew</a></div>
 </div>
 <div class="recipe-result">
-🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-032c9c96-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
+🢂 <span><span class="cost-recipe-ingredient" data-base-cost="2">2</span>× <img title="Tools" src="/data-wiki/img/sactx-0-4096x4096-BC7-Game UI Icons Atlas-2c8adbd5-32x32-260x1820.png"/> <a href="../goods/[Tools]_Simple_Tools.html"> Tools</a></span>
 </div>
 </div>
 </div>
